# felipeum

./: Cargo.toml  README.md
.github/workflows/: pipeline.yml
crates/net/p2p/: Cargo.toml
crates/net/p2p/src/: block.rs  chain.rs  lib.rs  p2p.rs
crates/net/rpc/: Cargo.toml
crates/net/rpc/src/: rpc.rs
crates/primitives/: Cargo.toml
crates/primitives/src/: bits.rs  chain.rs  lib.rs  signature.rs  transaction.rs
crates/signature/: Cargo.toml
crates/signature/src/: keypair.rs
crates/storage/: Cargo.toml
crates/transaction-pool/: Cargo.toml
crates/transaction-pool/src/: pool.rs
src/: main.rs  p2p.rs
