[package]
name = "felipeum_transaction_pool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
felipeum_primitives = { path = "../primitives" }
parking_lot = "0.12"
tokio = { version = "1", default-features = false, features = ["sync"] }
serde = {version = "1.0", features = ["derive"] }

