[package]
name = "felipeum_rpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jsonrpsee = { version = "0.16", features = ["server", "client", "macros"] }
felipeum_transaction_pool = { path = "../../transaction-pool" }
tokio = "1.23.1"
tracing-subscriber = "0.3.16"
anyhow = "1.0.68"
serde_json = "1.0"
serde = "1.0.152"
